--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": "sheerun/nimjs",
   "scripts": {
-    "postinstall": "node build.js"
+    "preinstall": "node build.js"
   },
   "bin": {
     "nim": "bin/nim"
@@ -18,8 +18,5 @@
     "nim",
     "nimrod",
     "compiler"
-  ],
-  "dependencies": {
-    "tmp": "0.0.28"
-  }
+  ]
 }
