--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "nimjs",
   "version": "0.0.2",
   "description": "Compile Nim in JavaScript",
-  "author": "Adam Stankiewicz",
   "license": "MIT",
-  "engines": {
-    "node": ">=0.12"
-  },
   "repository": "sheerun/nimjs",
+  "author": {
+    "name": "Adam Stankiewicz",
+    "email": "sheerun@sher.pl",
+    "url": "sheerun.net"
+  },
+  "engines": {
+    "node": ">=0.10.0"
+  },
   "scripts": {
-    "preinstall": "node build.js"
+    "build": "babel src --out-dir ."
   },
   "bin": {
     "nim": "bin/nim"
@@ -18,5 +22,23 @@
     "nim",
     "nimrod",
     "compiler"
-  ]
+  ],
+  "dependencies": {
+    "babel-runtime": "^6.9.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.9.0",
+    "babel-plugin-transform-runtime": "^6.9.0",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-stage-3": "^6.5.0"
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "stage-3"
+    ],
+    "plugins": [
+      "transform-runtime"
+    ]
+  }
 }
